--- a/package.json
+++ b/package.json
@@ -12,18 +12,23 @@
   ],
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
-  "devDependencies": {
-    "cordova-android": "^10.1.1",
-    "cordova-browser": "^6.0.0"
-  },
   "cordova": {
     "platforms": [
       "browser",
       "android"
-    ]
+    ],
+    "plugins": {
+      "cordova-plugin-device": {}
+    }
   },
   "dependencies": {
+    "jquery": "^3.6.0",
     "materialize-css": "^1.0.0-rc.2",
     "mongoose": "^6.2.5"
+  },
+  "devDependencies": {
+    "cordova-android": "^10.1.1",
+    "cordova-browser": "^6.0.0",
+    "cordova-plugin-device": "^2.0.3"
   }
 }
